--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.3.5",
+    "bootstrap": "^5.3.3",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-material-design-icons": "^5.2.0",
