--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.3.3",
     "pinia": "^2.0.32",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.2.47",
     "vue-material-design-icons": "^5.2.0",
     "vue-router": "^4.1.6"
